--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wedding Details</title>
+  <title>Wedding Reception</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
-    <section class="section">
-      <img src="savethedate.png" alt="Church Illustration" class="icon" />
-      <h1 class="section-title">THE CEREMONY</h1>
-      <p>The Homestead</p>
-      <p>2961 NE 185th St.</p>
-      <p>Starke, FL. 32091</p>
-      <p>3:00 P.M.</p>
-    </section>
 
     <section class="section">
       <img src="savethedate.png" alt="Reception Illustration" class="icon" />
