--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <div class="container">
+    <section class="section">
+      <img src="savethedate.png" alt="Church Illustration" class="icon" />
+      <h1 class="section-title">WE ELOPED!</h1>
+    </section>
 
     <section class="section">
       <img src="savethedate.png" alt="Reception Illustration" class="icon" />
