--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <section class="faq">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-item">
-        <button class="faq-question">Is there a dress code?</button>
-        <div class="faq-answer">Anything black is preferred. </div>
+        <button class="faq-question">Question</button>
+        <div class="faq-answer">Answer </div>
       </div>
       <div class="faq-item">
-        <button class="faq-question">When is the ceremony?</button>
-        <div class="faq-answer">The ceremony is at 9:30, but we will be eating and hanging out before.</div>
+        <button class="faq-question">Question</button>
+        <div class="faq-answer">Answer</div>
       </div>
     </section>
   </div>
