--- a/index.html
+++ b/index.html
@@ -3,34 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wedding Website</title>
+  <title>Reception</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
     <section class="section">
-      <img src="savethedate.png" alt="Church Illustration" class="icon" />
-      <h1 class="section-title">THE CEREMONY</h1>
-      <p>St. Mary Catholic Church</p>
-      <p>12340 Lancaster Road</p>
-      <p>Cleveland, Ohio 22305</p>
-      <p>3:00 P.M.</p>
+        <img src="savethedate.png" alt="Church Illustration" class="icon" />
+      <h1 class="section-title">WE ELOPED!</h1>
     </section>
 
     <section class="section">
       <img src="savethedate.png" alt="Reception Illustration" class="icon" />
       <h1 class="section-title">THE RECEPTION</h1>
-      <p>The Foyer Grand Hall</p>
-      <p>45678 Celebration Lane</p>
-      <p>Cleveland, Ohio 22305</p>
-      <p>6:00 P.M. - 11:00 P.M.</p>
+      <p>First Presbyterian Church</p>
+      <p>921 E Call St</p>
+      <p>Starke, FL 32091</p>
+      <p>TBD</p>
     </section>
 
     <section class="faq">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-item">
-        <button class="faq-question">Is there a dress code?</button>
-        <div class="faq-answer">Semi-formal attire is requested.</div>
+        <button class="faq-question">Q</button>
+        <div class="faq-answer">A</div>
       </div>
       <div class="faq-item">
         <button class="faq-question">Are kids welcome?</button>
