--- a/rsvp.html
+++ b/rsvp.html
@@ -1,24 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RSVP Form</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div class="container">
-    <section class="section">
-      <h2>RSVP</h2>
-      <form id="rsvp-form">
-        <input type="text" name="firstName" placeholder="First Name" required>
-        <input type="text" name="lastName" placeholder="Last Name" required>
-        <input type="number" name="attending" placeholder="Number Attending" min="1" required>
-        <textarea name="notes" placeholder="Additional Notes"></textarea>
-        <button type="submit">Submit RSVP</button>
-      </form>
-    </section>
-  </div>
-  <script src="main.js"></script>
-</body>
-</html>
+<form id="rsvp-form">
+  <input type="text" name="firstName" placeholder="First Name" required>
+  <input type="text" name="lastName" placeholder="Last Name" required>
+  <input type="number" name="attending" placeholder="Number Attending" required>
+  <textarea name="notes" placeholder="Additional Notes"></textarea>
+  <button type="submit">Submit</button>
+</form>
+
+<script>
+  const scriptURL = 'https://script.google.com/u/0/home/projects/16hLCsvOTtcYGNVrlccwxNOZVfjjc4tnp74OvWRj-4g1GvTMc6-0x7Zhk/edit'; // replace with the actual Web App URL
+
+  document.getElementById('rsvp-form').addEventListener('submit', e => {
+    e.preventDefault();
+    const formData = new FormData(e.target);
+    const data = Object.fromEntries(formData.entries());
+
+    fetch(scriptURL, {
+      method: 'POST',
+      body: JSON.stringify(data),
+      headers: { 'Content-Type': 'application/json' }
+    })
+    .then(() => {
+      alert('Thank you for your RSVP!');
+      window.location.href = 'index.html';
+    })
+    .catch(err => alert('Error submitting RSVP'));
+  });
+</script>
