--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       </div>
     </section>
 
-    <section class="section rsvp">
-      <h2>RSVP</h2>
-      <a href="rsvp.html"><button class="rsvp-button">RSVP Now</button></a>
+    <section class="rsvp-button-container">
+      <a href="rsvp.html">
+        <button class="rsvp-button">RSVP</button>
+      </a>
     </section>
   </div>
   <script src="main.js"></script>
