--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
       </div>
     </section>
 
-    <section class="rsvp-button-container">
-      <a href="rsvp.html">
-        <button class="rsvp-button">RSVP</button>
-      </a>
+    <section class="section rsvp">
+      <h2>RSVP</h2>
+      <a href="rsvp.html"><button class="rsvp-button">RSVP Now</button></a>
     </section>
   </div>
   <script src="main.js"></script>
