--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
   <div class="container">
     <section class="section">
         <img src="savethedate.png" alt="Church Illustration" class="icon" />
-      <h1 class="section-title">WE ELOPED!</h1>
+      <h1 class="section-title">WE'RE ELOPING!</h1>
     </section>
 
     <section class="section">
       <img src="savethedate.png" alt="Reception Illustration" class="icon" />
       <h1 class="section-title">THE RECEPTION</h1>
+      <div class="reception-details">
       <p>First Presbyterian Church</p>
       <p>921 E Call St</p>
       <p>Starke, FL 32091</p>
       <p>TBD</p>
+      </div>
     </section>
 
     <section class="faq">
