--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
       </div>
     </section>
 
-    <section class="section rsvp">
-      <h2>RSVP</h2>
-      <a href="rsvp.html"><button class="rsvp-button">RSVP Now</button></a>
-    </section>
+  
+      
+     <section class="rsvp-button-container">
+       <h2>RSVP</h2>
+      <a href="rsvp.html">
+    <button class="boton-elegante">RSVP</button>
+  </a>
+</section>
   </div>
   <script src="main.js"></script>
 </body>
