--- a/rsvp.html
+++ b/rsvp.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <form id="rsvp-form">
   <input name="firstName" placeholder="First Name" required />
   <input name="lastName" placeholder="Last Name" required />
