--- a/rsvp.html
+++ b/rsvp.html
@@ -4,7 +4,7 @@
   <input name="lastName" placeholder="Last Name" required />
   <input name="attending" type="number" placeholder="Attending" required />
   <textarea name="notes" placeholder="Notes"></textarea>
-  <button type="submit">Submit RSVP</button>
+  <button type="submit" class="boton-elegante">Submit RSVP</button>
 </form>
 
 <script>
