--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
     <section class="section">
-        <img src="savethedate.png" alt="Church Illustration" class="icon" />
-      <h1 class="section-title">WE'RE ELOPING!</h1>
+        <img src="church.png" alt="Church Illustration" class="icon" />
+      <h1 class="section-title">WE ELOPED!</h1>
     </section>
 
     <section class="section">
