--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reception</title>
+  <title>E+R Reception</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
+    <section class="section">
+            <h1 class="section-title">EDEN AND RYAN</h1>
+          </section>
+    
     <section class="section">
         <img src="church.png" alt="Church Illustration" class="icon" />
       <h1 class="section-title">WE ELOPED!</h1>
