--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
 <section class="registry-button-container">
-  <a href="https://www.example.com/your-registry-link" target="_blank">
+  <a href="https://www.amazon.com/wedding/organize-registry?ref_=gr-home-wedding-viewyr" target="_blank">
     <button class="boton-elegante">Registry</button>
   </a>
 </section>
