--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
           <div class="faq-item">
         <button class="faq-question">Will there be food?</button>
-        <div class="faq-answer">We will have finger foods and appetizers.</div>
+        <div class="faq-answer">We will have finger foods, appetizers, and cake.</div>
       </div>
       
       <div class="faq-item">
