--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <section class="section">
-            <h1 class="section-title">EDEN AND RYAN</h1>
+            <h2 class="Parisienne">EDEN AND RYAN</h1>
           </section>
     
     <section class="section">
