--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <section class="section">
-            <h1 class="names">EDEN AND RYAN</h1>
+            <h1 class="names">Eden and Ryan</h1>
           </section>
     
     <section class="section">
