--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         <button class="faq-question">Is there a dress code?</button>
         <div class="faq-answer">We would reccommend semi-formal attire</div>
       </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Should I bring a gift?</button>
+        <div class="faq-answer">Your presence is all that we need! But if you would like to get us a gift, our registry is linked above.</div>
+      </div>
           <div class="faq-item">
         <button class="faq-question">Where can I park?</button>
         <div class="faq-answer">The church should have plenty of parking for everyone.</div>
