--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
+<div class="page-wrapper">
+    <div class="parallax-side"></div>
+    <div class="main-content">
+  
   <div class="container">
     <section class="section">
             <h1 class="names">Eden and Ryan</h1>
@@ -81,6 +86,11 @@
     <button class="boton-elegante">RSVP</button>
   </a>
 </section>
+
+    
+<!-- Right parallax background -->
+    <div class="parallax-side"></div>
+    
   </div>
   <script src="main.js"></script>
 </body>
