--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="page-wrapper">
-    <div class="parallax-side"></div>
+    <div class="parallax-side left"></div>
     <div class="main-content">
   
   <div class="container">
@@ -89,7 +89,7 @@
 
     
 <!-- Right parallax background -->
-    <div class="parallax-side"></div>
+    <div class="parallax-side right"></div>
     
   </div>
   <script src="main.js"></script>
