--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
     
 <!-- Right parallax background -->
+    <div class="parallax-side left"></div>
     <div class="parallax-side right"></div>
     
   </div>
