--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
       <img src="church.png" alt="Reception Illustration" class="icon" />
       <h1 class="section-title">THE RECEPTION</h1>
       <div class="reception-details">
+      <p>Join Us</p>
+      <p>November 8th, 2025</p>
+      <p>2:00 PM - 6:00 PM</p>  
       <p>First Presbyterian Church</p>
       <p>921 E Call St</p>
       <p>Starke, FL 32091</p>
-      <p>TBD</p>
+      
+
       </div>
     </section>
 
