--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
     <button class="boton-elegante">Registry</button>
   </a>
 </section>
+/*                        */
+<section class="faq">
+      <h2>Itinerary</h2>
+      
+      <div class="faq-item">
+        <button class="faq-question">Itinerary</button>
+        <div class="faq-answer">Time</div>
+      </div>
+/*                          */
     
     <section class="faq">
       <h2>Frequently Asked Questions</h2>
