--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
   <div class="faq-item"> 
     <button class="faq-question">Itinerary</button> 
     <div class="faq-answer">
-      <p>Event            Time</p>  
-      <p>Event            Time</p>  
+
+<p>2:45    Slide show and music begins</p>
+<p>3:00                 Food comes out</p>
+<p>3:00                  Guests arrive</p>
+<p>3:45            Toasts and Speeches</p>
+<p>4:30      Cake cutting and dessert </p>
+<p>5:00            Thank you speeches </p>
+<p>5:30-6:00                  Goodbyes</p>  
     </div>
   </div> 
       
