--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
 <section class="registry-button-container">
-  <a href="https://www.amazon.com/wedding/organize-registry?ref_=gr-home-wedding-viewyr" target="_blank">
+  <a href="https://www.amazon.com/wedding/share/edenandryan" target="_blank">
     <button class="boton-elegante">Registry</button>
   </a>
 </section>
